--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "repaso-js",
+  "name": "Dog Api",
   "version": "1.0.0",
   "description": "",
   "main": "Repaso JS.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon .\\src\\app.js"
   },
   "keywords": [],
   "author": "",
