--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "npm .\\src\\app.js",
-    "start": "nodemon .\\src\\app.js"
+    "test": "npm ./src/app.js",
+    "start": "nodemon ./src/app.js"
   },
   "keywords": [],
   "author": "",
